--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.7",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "axios": "0.18.0",
+    "bootstrap": "4.3.1",
+    "jquery": "3.3.1",
+    "popper.js": "1.14.7",
+    "react": "16.8.2",
+    "react-dom": "16.8.2",
+    "react-redux": "6.0.0",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.5",
-    "redux": "^4.0.1"
+    "redux": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
